feat(blitter): Make bleat endpoints accessible without authentication
